# IndusToDo

./: .flake8  Dockerfile.celery  README.md  docker-compose.yml  entrypoint.sh  gunicorn_config.py  pyproject.toml  pytest.ini
apps/auth/: apps.py  models.py  urls.py  views.py
apps/core/: apps.py  models.py
apps/rules/: apps.py  models.py  urls.py  views.py
apps/tasks/: admin.py  apps.py  models.py  urls.py  views.py
apps/tasks/management/commands/: seed_data.py
apps/tasks/migrations/: __init__.py
apps/users/: apps.py  models.py  signals.py  urls.py  views.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: authentication.py  logging.py  middleware.py  pagination.py  permissions.py  rule_engine.py  serializers.py  tasks.py
