[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-management-system"
version = "1.0.0"
description = "A scalable Task Management System with Dynamic Rule-Based Task Assignment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Senior SDE", email = "sde@example.com"}
]
keywords = ["django", "task", "management", "rules", "assignment"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["apps", "core", "config"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
